--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.10.2",
+    "nuxt-svgo": "^4.0.2",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   },
