--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@vueuse/nuxt": "^10.9.0",
+    "dotenv": "^16.4.5",
     "nuxt": "^3.10.2",
     "nuxt-svgo": "^4.0.2",
     "vue": "^3.4.19",
@@ -20,6 +23,7 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "prisma": "^5.17.0",
     "sass": "^1.71.1"
   }
 }
