--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "netlify-build": "netlify build",
+    "netlify-preview": "netlify deploy",
+    "netlify-deploy": "netlify deploy --prod",
+    "lint": "prettier --check .",
+    "format": "prettier --write .",
+    "supabase-generate": "supabase gen types typescript --project-id colcqozvcsjmtwqyopmh --schema public > types/supabase.ts",
+    "prisma-push": "prisma db push",
+    "prisma-generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
@@ -20,6 +28,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.8.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
