--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,8 @@
 [build]
   command = "npx prisma generate && npm run build"
   publish = "dist"
-
-[build.environment]
-  PRISMA_CLIENT_ENGINE_TYPE = "binary"
-
-[[plugins]]
-  package = "@netlify/plugin-functions-install-node-modules"
+  environment = { PRISMA_CLIENT_ENGINE_TYPE = "binary" }
 
 [functions]
   node_bundler = "esbuild"
-
-[functions.build]
-  included_files = ["./prisma/schema.prisma"]
+  build = { included_files = ["./prisma/schema.prisma"] }
