--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "prisma-generate": "prisma generate"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^5.1.0",
+    "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.17.0",
     "@supabase/supabase-js": "^2.44.4",
     "@vueuse/nuxt": "^10.9.0",
     "dotenv": "^16.4.5",
     "nuxt": "^3.10.2",
     "nuxt-svgo": "^4.0.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.19",
-    "vue-router": "^4.2.5",
-    "@nuxtjs/sitemap": "^5.1.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@netlify/functions": "^2.8.1",
